Issue #112 Migrate from tomcat to spring boot
Configure data source
Use external properties file
Reconfigure packaging
Remove timestamps from logging as this is tracked by systemd
Allow systemd process to attain new privileges for sudo access to reload nginx.
Add mandatory parameters to GET request in system test.

Quartz Jobs:
Job scope is still implemented by hand.
Add AutoWiringSpringBeanJobFactory to have quartz beans injected by
spring

Explicitly use jackson 2 which will be deprecated soon, to avoid
rewriting the common module.

Spring MVC interop:
Annotate json requests with @RequestBody so they work.
Override mapping with JSON endpoint as type inference in jackson fails
otherwise.